<resources>
    <string name="app_name">HolaLinearLayout</string>

    <string name="tv_red">Red</string>
    <string name="tv_green">Green</string>
    <string name="tv_blue">Blue</string>
    <string name="tv_yellow">Yellow</string>

    <string name="tv_one">One</string>
    <string name="tv_two">Two</string>
    <string name="tv_three">Three</string>
    <string name="tv_four">Four</string>
</resources>
