<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:text="@string/tv_red"
            android:gravity="center_horizontal"
            android:background="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tv_green"
            android:gravity="center_horizontal"
            android:background="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tv_blue"
            android:gravity="center_horizontal"
            android:background="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tv_yellow"
            android:gravity="center_horizontal"
            android:background="@color/yellow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:text="@string/tv_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tv_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tv_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_weight="1" />

        <TextView
            android:text="@string/tv_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
